<resources>
    <string name="app_name">Life Up</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings for Difficulty Spinner -->
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_hard">Hard</string>

    <string name="frequency_periodically">Once</string>
    <string name="frequency_daily">Daily</string>
    <string name="frequency_weekly">Weekly</string>

    <string name="level">level</string>

    <string name="first_time_dialog">The app that turns everyday tasks into an adventure</string>

    <string name="no_gender">That\'s awesome that you identify as something else (perhaps a tri-gender pyro fox?) but this game only has settings for boys and girls :(</string>

    <string name="first_time_task">Let\'s start by adding our first task. Click the plus button to the right! </string>

    <string name="first_time_task_editor">Excellent! Here you can add activities you want to work on (Read, Run, Etc.) and then press the button below to save them.</string>
    <string name="first_time_reward_editor">Completing tasks makes you a more productive person, but everyone needs a break now and then!  Here you can make reward activities and charge yourself whatever amount of gold you think they should cost</string>

    <string name="level_up_explanation">Completing tasks will grant gold and experience.  Build up enough experience and you\'ll grow levels and unlock new features. </string>

    <string name="swipe_right">Now you\'re ready to begin your adventure towards a more productive life!  Swipe to explore more LifeUp fun</string>

    <string name="first_battle">Welcome to the Battlefield.  Here you can fight different enemies on your adventure and gain rare loot! Click on the enemies as they pop up to attack before they fight back!</string>

    <string name="new_task_title">New Task</string>

    <string name="new_reward_title">New Reward</string>

    <!-- AdMob ad unit IDs -->
    <string name="banner_home_footer">ca-app-pub-4519081494904149/5206804515 </string>

    <string name="player_health_text">Health: </string>
    <string name="player_name_text">Player Name</string>
    <string name="player_experience_text">Experience: </string>
    <string name="ok">OK</string>
    <string name="okay">Okay</string>

    <string name="enemy_health_dummy">Enemy Health: </string>

    <string name="tasks">Tasks</string>
    <string name="adventure">Adventure</string>
    <string name="rewards">Rewards</string>

    <string name="welcome_string">Welcome To LifeUp!</string>
    <string name="boy">Boy</string>
    <string name="girl">Girl</string>

    <string name="level_up_text">You Leveled Up!</string>
    <string name="groovy">Groovy!</string>
    <string name="radical">Radical!</string>
    <string name="lets_go">Let\'s go!</string>

    <string name="store">Store</string>

    <string name="reward_text">New Reward:</string>
    <string name="reward_hint">Junk Food, T.V., etc.</string>
    <string name="reward_cost_text">Cost:</string>
    <string name="reward_cost_hint">Gold Cost</string>
    <string name="add_reward_text">Add Reward</string>

    <string name="task_text">New Task:</string>
    <string name="task_hint">Task(Read, Run, etc.)</string>
    <string name="difficulty_text">Difficulty:</string>
    <string name="frequency_text">Frequency:</string>
    <string name="add_task_text">Add Task</string>

    <string name="get_more_health">Get More Health (20 gold)</string>

</resources>
