<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="350dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_string"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/intro_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:text="@string/first_time_dialog"
        android:padding="8dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/intro_boy_selection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/boy_start"
            />

        <ImageView
            android:id="@+id/intro_girl_selection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/girl_start"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boy"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"

            android:paddingRight="80dp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/girl"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:layout_gravity="center"/>


    </LinearLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/no_gender_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_gender"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/black"
            android:visibility="invisible"
            android:padding="8dp"/>

        <Button
            android:id="@+id/intro_ok_button"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="Let's Get Started!"
            android:background="@drawable/topgrad"
            android:visibility="invisible"
            />


    </RelativeLayout>


</LinearLayout>