<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.satyrlabs.lifeup.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/topgrad">


        <TextView
            android:id="@+id/health_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_health_text"
            android:textAppearance="@style/CodeFont"
            android:layout_toRightOf="@+id/character_relative_layout"
            android:layout_toEndOf="@+id/character_relative_layout"
            android:layout_below="@+id/player_name"
            />

        <ImageView
            android:id="@+id/health_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/health_bar_full"
            android:layout_toRightOf="@+id/health_text"
            android:layout_below="@+id/player_name"/>

        <ImageView
            android:id="@+id/gold_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/gold_coin"
            android:layout_marginTop="90dp"
            android:layout_toRightOf="@+id/character_relative_layout"
            />

        <TextView
            android:id="@+id/gold_int"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAppearance="@style/CodeFont"
            android:layout_toRightOf="@+id/gold_text"
            android:layout_toEndOf="@+id/gold_text"
            android:layout_alignTop="@+id/gold_text"/>

        <ImageView
            android:id="@+id/diamond_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/diamond"
            android:layout_marginTop="90dp"
            android:layout_toRightOf="@id/gold_int"
            android:layout_toEndOf="@id/gold_int"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"/>

        <TextView
            android:id="@+id/diamond_int"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAppearance="@style/CodeFont"
            android:layout_toRightOf="@+id/diamond_image"
            android:layout_toEndOf="@+id/diamond_image"
            android:layout_alignTop="@+id/diamond_image"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"/>

        <TextView
            android:id="@+id/current_health"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="50"
            android:typeface="serif"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"
            android:layout_toRightOf="@+id/diamond_int"
            android:layout_toEndOf="@+id/diamond_int"
            android:layout_alignTop="@+id/diamond_int"
            android:paddingLeft="30dp"
            android:paddingStart="30dp"
            />
        <TextView
            android:id="@+id/health_backslash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" / "
            android:typeface="serif"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"
            android:layout_toRightOf="@+id/current_health"
            android:layout_toEndOf="@+id/current_health"
            android:layout_alignTop="@+id/current_health"

            />
        <TextView
            android:id="@+id/max_health"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="50"
            android:typeface="serif"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"
            android:layout_toRightOf="@+id/health_backslash"
            android:layout_toEndOf="@+id/health_backslash"
            android:layout_alignTop="@+id/health_backslash"

            />

        <TextView
            android:text="@string/player_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/player_name"
            android:textAppearance="@style/CodeFont"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/character_relative_layout"
            android:layout_toEndOf="@+id/character_relative_layout"
            android:layout_marginTop="16dp"
            android:paddingBottom="4dp"/>

        <RelativeLayout
            android:id="@+id/character_relative_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/girl_animation"
                android:id="@+id/character"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/start_shirt"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/start_hat"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/start_legging"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/start_weapon"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/start_shield"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                />


            <TextView
                android:text="Level:"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/level_text"
                android:layout_below="@+id/character"
                android:textAppearance="@style/CodeFont"
                android:paddingLeft="24dp"
                android:paddingTop="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/level_text"
                android:layout_toRightOf="@+id/level_text"
                android:layout_toEndOf="@+id/level_text"
                android:id="@+id/level_int"
                android:paddingTop="4dp"
                android:text="1"
                android:textAppearance="@style/CodeFont"/>

        </RelativeLayout>


        <TextView
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/experience_text"
            android:id="@+id/experience_int"
            android:textAppearance="@style/CodeFont"
            android:layout_toRightOf="@+id/experience_text"
            android:layout_toEndOf="@+id/experience_text" />

        <TextView
            android:id="@+id/experience_int_slash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/"
            android:textAppearance="@style/CodeFont"
            android:layout_toRightOf="@+id/experience_int"
            android:layout_toEndOf="@+id/experience_int"
            android:paddingLeft="8dp"
            android:layout_alignBottom="@+id/experience_int"
            />

        <TextView
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/experience_text"
            android:id="@+id/experience_max_int"
            android:textAppearance="@style/CodeFont"
            android:paddingLeft="8dp"
            android:layout_toRightOf="@+id/experience_int_slash"
            android:layout_toEndOf="@+id/experience_int_slash" />

        <TextView
            android:text="@string/player_experience_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/experience_text"
            android:textAppearance="@style/CodeFont"
            android:layout_marginTop="120dp"
            android:layout_toRightOf="@+id/character_relative_layout"
            />


    </RelativeLayout>

    <android.support.v4.view.ViewPager
        android:background="@drawable/listgrad"
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_home_footer">
    </com.google.android.gms.ads.AdView>



</LinearLayout>
